After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 553334 - gailrange exposes an action which does nothing
gailrange exposes an action which does nothing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
2.14.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2008-09-22 23:33 UTC by Mike Gorse
Modified: 2013-02-04 06:03 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24



Description Mike Gorse 2008-09-22 23:33:42 UTC
Please describe the problem:
GailRange exposes an "activate" action which calls gtk_widget_activate.  gtk_widget_activate only does something if the widget has defined an action (ie, set activate_signal in the class).  I'm not sure why this action was added to gail, but gail_range_get_n_actions() for instance could check that the widget class's activate_signal is non-zero before reporting an action.

Steps to reproduce:
1. 
2. 
3. 
Open an application with a scroll bar (gedit will show one if there are enough lines of text).  Look at the scroll bar in accerciser.

Actual results:
Running queryAction().nActions will return 1, and queryAction.doAction(0) will not do anything.

Expected results:
Either AtkAction would be unimplemented, or nActions would return 0

Does this happen every time?
yes, although it is possible for a custom class to derive from GtkRange and have an action, in which case it makes sense for gail to expose it.

Other information: